--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\saitu\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "python.pythonPath": "C:\\Users\\RahulV\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
     "git.ignoreLimitWarning": true
 }
